--- a/package.json
+++ b/package.json
@@ -22,21 +22,21 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "0.23.0",
-    "@builder.io/qwik-city": "0.6.6",
-    "@types/eslint": "8.21.3",
+    "@builder.io/qwik": "latest",
+    "@builder.io/qwik-city": "latest",
+    "@types/eslint": "^8.21.3",
     "@types/node": "^18.15.5",
     "@types/node-fetch": "^2.6.2",
-    "@typescript-eslint/eslint-plugin": "5.56.0",
-    "@typescript-eslint/parser": "5.56.0",
-    "eslint": "8.36.0",
-    "eslint-plugin-qwik": "0.23.0",
-    "node-fetch": "3.3.1",
-    "prettier": "2.8.6",
-    "typescript": "5.0.2",
-    "undici": "5.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "eslint": "^8.36.0",
+    "eslint-plugin-qwik": "latest",
+    "node-fetch": "^3.3.1",
+    "prettier": "^2.8.6",
+    "typescript": "^5.0.2",
+    "undici": "^5.21.0",
     "vercel": "^28.17.0",
-    "vite": "4.2.1",
-    "vite-tsconfig-paths": "4.0.7"
+    "vite": "^4.2.1",
+    "vite-tsconfig-paths": "^4.0.7"
   }
 }
