--- a/package.json
+++ b/package.json
@@ -22,21 +22,21 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "latest",
-    "@builder.io/qwik-city": "latest",
-    "@types/eslint": "^8.21.3",
-    "@types/node": "^18.15.5",
-    "@types/node-fetch": "^2.6.2",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "eslint": "^8.36.0",
-    "eslint-plugin-qwik": "latest",
+    "@builder.io/qwik": "^1.1.0",
+    "@builder.io/qwik-city": "^1.1.0",
+    "@types/eslint": "^8.37.0",
+    "@types/node": "^20.1.2",
+    "@types/node-fetch": "*",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "eslint": "^8.40.0",
+    "eslint-plugin-qwik": "^1.1.0",
     "node-fetch": "^3.3.1",
-    "prettier": "^2.8.6",
-    "typescript": "^5.0.2",
-    "undici": "^5.21.0",
-    "vercel": "^28.17.0",
-    "vite": "^4.2.1",
-    "vite-tsconfig-paths": "^4.0.7"
+    "prettier": "^2.8.8",
+    "typescript": "^5.0.4",
+    "undici": "^5.22.0",
+    "vercel": "^29.1.1",
+    "vite": "^4.3.5",
+    "vite-tsconfig-paths": "^4.2.0"
   }
 }
