--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@builder.io/qwik-city": "^1.1.0",
     "@types/eslint": "^8.37.0",
     "@types/node": "^20.1.2",
-    "@types/node-fetch": "*",
+    "@types/node-fetch": "^2.6.3",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
