--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "vercel": "^32.5.0",
     "vite": "^4.3.5",
     "vite-tsconfig-paths": "^4.2.0"
+  },
+  "dependencies": {
+    "firebase": "^10.6.0"
   }
 }
