--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
+    "build.server": "vite build -c adapters/firebase/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
-    "deploy": "vercel deploy",
+    "deploy": "firebase deploy",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
+    "serve": "qwik build && firebase emulators:start",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
   },
@@ -35,11 +36,11 @@
     "@typescript-eslint/parser": "^6.9.1",
     "eslint": "^8.40.0",
     "eslint-plugin-qwik": "^1.1.0",
+    "firebase-tools": "^12.6.2",
     "node-fetch": "^3.3.1",
     "prettier": "^3.0.3",
     "typescript": "^5.0.4",
     "undici": "^5.22.0",
-    "vercel": "^32.5.0",
     "vite": "^4.3.5",
     "vite-tsconfig-paths": "^4.2.0"
   },
