ws: make it easier to test on local devices

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "preview": "qwik build preview && vite preview --open",
     "serve": "qwik build && firebase emulators:start",
     "start": "vite --open --mode ssr",
+    "start.external": "vite --open --mode ssr --host",
     "qwik": "qwik"
   },
   "prettier": {
