--- a/firebase.json
+++ b/firebase.json
@@ -13,6 +13,17 @@
   ],
   "hosting": {
     "public": "dist",
+    "headers": [
+      {
+        "source": "**/*.@(jpg|jpeg|gif|png|webp|svg|js|css)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=172800, s-maxage=259200, stale-while-revalidate=259200"
+          }
+        ]
+      }
+    ],
     "rewrites": [
       {
         "source": "**",
