--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@shabados/web",
   "description": "App for Shabad OS",
   "engines": {
-    "node": ">=15.0.0"
+    "node": ">=22.0.0"
   },
   "private": true,
   "scripts": {
@@ -28,25 +28,29 @@
     "jsxSingleQuote": true
   },
   "devDependencies": {
-    "@builder.io/qwik": "^1.1.0",
-    "@builder.io/qwik-city": "^1.1.0",
-    "@types/eslint": "^8.37.0",
-    "@types/node": "^20.1.2",
+    "@builder.io/qwik": "^1.17.1",
+    "@builder.io/qwik-city": "^1.17.1",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.38.0",
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^24.9.2",
     "@types/node-fetch": "^2.6.3",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "eslint": "^8.40.0",
-    "eslint-plugin-qwik": "^1.1.0",
-    "firebase-tools": "^12.6.2",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
+    "eslint": "^9.38.0",
+    "eslint-plugin-qwik": "^1.17.1",
+    "firebase-tools": "^14.22.0",
+    "globals": "^16.4.0",
     "node-fetch": "^3.3.1",
     "prettier": "^3.0.3",
     "typescript": "^5.0.4",
-    "undici": "^5.22.0",
-    "vite": "^4.3.5",
-    "vite-tsconfig-paths": "^4.2.0"
+    "typescript-eslint": "^8.46.2",
+    "undici": "^7.16.0",
+    "vite": "^7.1.12",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "dependencies": {
-    "firebase": "^10.6.0",
+    "firebase": "^12.4.0",
     "uqr": "^0.1.2"
   }
 }
